# botdiscordchatgpt

./: .gitignore  Procfile  README.md  app.py  pyproject.toml  requirements.txt  tokens.env
config/: config.yaml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
src/: main.py
src/ai/: groq.py  message_manager.py  message_store.py  openai.py  personality.py
src/bot/: __init__.py  client.py  commands.py
src/utils/: __init__.py  config.py  logger.py
